addressed review comments